# compendium

./: .gitignore  BUILDSTORY.md  LICENSE  README.md  index.html  manifest.json  package-lock.json  package.json  sw.js  sync-frontend.sh
css/: compendium.css
js/: backup.js  db.js  heatmap.js  nav.js  patterns.js  ritual.js  themes.js  thread.js  timeline.js  util.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  storage.rs
