[package]
name = "compendium"
version = "0.5.0"
description = "A daily reflection that stays on your device."
authors = ["Jason K. Don / PENTASIR"]
edition = "2021"

[lib]
name = "compendium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
